Make sure content is aligned to right side with text-right

--- a/src/indigo/less/main-content.less
+++ b/src/indigo/less/main-content.less
@@ -109,6 +109,9 @@
             width: 30px;
         }
     }
+    &.text-right {
+        text-align: right;
+    }
 }
 
 .kbc-main-content > .row,
